--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>test</title>
+</head>
+<body>
+    <h1>eburytest</h1> 
+    <p>This is a test via cmd opening vs and creating a page like so... </p>
+</body>
+</html>
